# imgui-cmake

./: Toolchain-rpi.cmake  setup-armhf.sh  setup.sh
libs/: CMakeLists.txt
libs/prebuilt/libs/linux/armhf/: libSDL2-2.0.so.0.18.3
libs/prebuilt/libs/win32/x64/: SDL2d.lib  SDL2maind.lib
libs/prebuilt/libs/win32/x86/: SDL2d.lib  SDL2maind.lib
